[gd_scene load_steps=6 format=3 uid="uid://bub0ks18nq1y8"]

[ext_resource type="Theme" uid="uid://dnk1itlvy5syr" path="res://User Interface/GUI Theme/role_select.tres" id="1_m2hlo"]
[ext_resource type="Script" path="res://User Interface/script/single_or_multiplayer.gd" id="2_iitcw"]

[sub_resource type="Animation" id="Animation_eypmn"]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HBoxContainer/MultiPlayer/VSplitContainer:custom_minimum_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(400, 800)]
}

[sub_resource type="Animation" id="Animation_bw32t"]
resource_name = "button_show"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HBoxContainer/MultiPlayer/VSplitContainer:custom_minimum_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.554785, 0.554785),
"update": 0,
"values": [Vector2(400, 800), Vector2(400, 400)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6agtj"]
_data = {
"RESET": SubResource("Animation_eypmn"),
"show_button": SubResource("Animation_bw32t")
}

[node name="SingleOrMultiplayer" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_m2hlo")
script = ExtResource("2_iitcw")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -174.0
offset_bottom = -99.0
grow_horizontal = 2
grow_vertical = 0

[node name="Back" type="Button" parent="CenterContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
text = "Back"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -626.0
offset_top = -200.0
offset_right = 626.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="SinglePlayer" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
size_flags_horizontal = 2
text = "SinglePlayer"

[node name="MultiPlayer" type="Button" parent="HBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
size_flags_horizontal = 10
text = "MultiPlayer"

[node name="VSplitContainer" type="VSplitContainer" parent="HBoxContainer/MultiPlayer"]
custom_minimum_size = Vector2(400, 800)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.5
offset_top = -90.0
offset_right = 54.5
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
dragger_visibility = 2

[node name="Host" type="Button" parent="HBoxContainer/MultiPlayer/VSplitContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 2
text = "Host"

[node name="Join" type="Button" parent="HBoxContainer/MultiPlayer/VSplitContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 10
text = "Join"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6agtj")
}

[connection signal="pressed" from="CenterContainer/Back" to="." method="_back_to_start_menu"]
[connection signal="pressed" from="HBoxContainer/SinglePlayer" to="." method="_next_view"]
[connection signal="mouse_entered" from="HBoxContainer/MultiPlayer" to="." method="_on_multi_player_mouse_entered"]
[connection signal="gui_input" from="HBoxContainer/MultiPlayer/VSplitContainer/Host" to="." method="_on_host_gui_input"]
[connection signal="pressed" from="HBoxContainer/MultiPlayer/VSplitContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="HBoxContainer/MultiPlayer/VSplitContainer/Join" to="." method="_on_join_pressed"]
